--- a/templates/dashboards/manager/users.html
+++ b/templates/dashboards/manager/users.html
@@ -765,15 +765,18 @@
     <aside class="custom-sidebar" id="sidebar">
         <h1 class="sidebar-title">Manager<span style="color: rgb(250, 250, 121);">Pro</span></h1>
         <ul class="sidebar-menu">
-            <li><a href="/manager/dashboard" class="sidebar-link"><i class="bi bi-speedometer2"></i>
+            <li><a href="/manager/dashboard" class="sidebar-link "><i class="bi bi-speedometer2"></i>
                     <span>Dashboard</span></a></li>
             <li><a href="/manager/users" class="sidebar-link active"><i class="bi bi-people"></i> <span>Users</span></a>
             </li>
-            <li><a href="/manager/events" class="sidebar-link"><i class="bi-megaphone"></i> <span>Events</span></a></li>
-            <li><a href="/manager/verify-orders" class="sidebar-link"><i class="bi bi-calendar-check"></i> <span>Verify Order</span></a></li>
-            <li><a href="#" class="sidebar-link"><i class="bi bi-clipboard-data"></i> <span>Performance</span></a></li>
-            <li><a href="#" class="sidebar-link"><i class="bi bi-gear"></i> <span>Settings</span></a></li>
-            <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
+            <li><a href="/manager/events" class="sidebar-link "><i class="bi-megaphone"></i> <span>Events</span></a></li>
+            <li><a href="/manager/verify-orders" class="sidebar-link "><i class="bi bi-calendar-check"></i> <span>Verify
+                        Order</span></a></li>
+            <li><a href="/manager/all-orders" class="sidebar-link"><i class="bi bi-clipboard-data"></i>
+                    <span>All Orders</span></a></li>
+
+            <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a>
+            </li>
         </ul>
     </aside>
     <header class="custom-topbar" id="topbar">
